# FreeCAD_CAM_Extensions

./: .gitignore  ADD_TO_TOOLBAR.md  ArcFeedRatePatch.py  BaseGeometryReorderPanel.py  CAMExtensions_Commands.py  DEVELOPMENT.md  DISC HOLDER.code-workspace  INSTALL_TEST.md  Init.py  InitGui.py  LICENSE  OperationVariablesPanel.py  ParametricArray.FCMacro  README.md  RESTRUCTURE_NOTES.md  SplitProfilePanel.py  deploy.bat  deploy.txt  deploy_to_freecad.ps1  package.xml
cam/: OperationVariablesPanel.py  ProfileOrderPatch.py  SplitProfilePanel.py  __init__.py
common/: __init__.py
design/: ProductionArrayFeature.py  ProductionArrayPanel.py  __init__.py
sketcher/: ParametricArrayCommands.py  ParametricArrayConstraint.py  ParametricArrayPanel.py  __init__.py
